# transport-data-visualisation

./: .cursorrules  .env.example  .gitignore  LICENSE  README.md  vercel.json
.cursor/: mcp.json
.github/workflows/: run_etl.yml
backend/: etl_pipeline.py  hts_extractor.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: health.py  vehicle_profiles.py
backend/app/db/: database.py  session.py
backend/app/models/: __init__.py  commute.py
backend/app/services/: __init__.py  travel_service.py
backend/etl/: __init__.py  backfill_historical_snapshots.py  etl_pipeline.py  hts_extractor.py  month_utils.py  od_pairs.yaml  run_pipeline.py
backend/etl/config/: od_pairs.yaml
backend/migrations/: 20260601_add_snapshot_month.sql
backend/services/: __init__.py  cost_engine.py  report_aggregator.py  travel_engine.py
backend/tests/: conftest.py  test_cache.py  test_commute_api.py  test_cost_engine.py  test_etl_pipeline.py  test_etl_supabase.py  test_health.py  test_hts_extractor.py  test_month_utils.py  test_pt_options.py  test_travel_engine.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/design/: storytelling.md
frontend/public/data/: sydney_sa3_boundaries.geojson
frontend/src/: App.vue  env.d.ts  main.ts  style.css
frontend/src/api/: commuteClient.ts  reportSupabase.ts  supabaseClient.ts
frontend/src/components/: AverageCommuteScorecards.vue  CommuteChoroplethMap.vue  CommuteDashboard.vue  (+10 more)
scripts/: dev.sh
(+37 files in other folders)
